@@ -445,10 +445,10 @@ additional packages. However, you may want to add some additional sources,
 for example for source packages and security updates:
 
 <informalexample><screen>
-deb-src http://ftp.us.debian.org/debian etch main
+deb-src http://ftp.us.debian.org/debian &releasename; main
 
-deb http://security.debian.org/ etch/updates main
-deb-src http://security.debian.org/ etch/updates main
+deb http://security.debian.org/ &releasename;/updates main
+deb-src http://security.debian.org/ &releasename;/updates main
 </screen></informalexample>
 
 Make sure to run <userinput>aptitude update</userinput> after you have
