@@ -81,6 +81,10 @@ installation-guide (2007xxxx) UNRELEASED; urgency=low
       guided and manual partitioning
   * howto, preseed: update for reordering of the installation procedure.
 
+  [ Colin Watson ]
+  * Use &releasename; rather than hardcoding etch in sources.list
+    recommendation for chroot installs. Closes: #458459.
+
  -- Frans Pop <fjp@debian.org>  Sun, 30 Dec 2007 12:59:38 +0100
 
 installation-guide (20070319) unstable; urgency=low
